--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
-install: gradle wrapper --gradle-version 4.2
-
 language: java
 
 before_install:
- - chmod a+x gradlew
+ - chmod +x gradlew
 
 jdk:
-  - oraclejdk8
+- oraclejdk8
